# wsl-tamer

./: .gitignore  CONTRIBUTING.md  GenerateIcon.ps1  PLAN.md  README.md  REFACTOR_PLAN.md  ROADMAP.md  WslTamer.sln  build_installer.ps1  package-lock.json  run-ui-tests.ps1  test-single.ps1
.github/: pull_request_template.md
.github/workflows/: release.yml  update-docs.yml
docs/: IMPLEMENTATION_CHECKLIST.md  PLAN-backend-quality-review.md
docs/archive/: ARCHITECTURE_VISION.md  ELECTRON_MIGRATION_PLAN.md  INDEX.md  ROADMAP_CHANGES.md  ROADMAP_OLD.md  ROADMAP_PRIORITY.md  ROADMAP_SUMMARY.md
docs/roadmap/: PHASE_QUICK_START_TEMPLATE.md  phase-00-installation.md  phase-01-distribution-management.md  phase-02-snapshots-backup.md  phase-03-monitoring.md  phase-04-ui-ux.md  phase-05-automation.md  (+9 more)
scripts/: check-links.ps1
wsl-tamer-tauri/: package-lock.json  package.json  vite.config.ts
wsl-tamer-tauri/src-tauri/: Cargo.toml  tauri.conf.json
wsl-tamer-tauri/src-tauri/capabilities/: default.json
wsl-tamer-tauri/src-tauri/src/: lib.rs  main.rs
wsl-tamer-tauri/src-tauri/src/commands/: config.rs  hardware.rs  mod.rs  monitoring.rs  profiles.rs  wsl.rs
wsl-tamer-tauri/src-tauri/src/models/: config.rs  distribution.rs  hardware.rs  mod.rs  monitoring.rs  profile.rs
wsl-tamer-tauri/src-tauri/src/services/: automation_engine.rs  hardware_service.rs  mod.rs  profile_manager.rs  wsl_service.rs
wsl-tamer-tauri/src-tauri/src/tray/: icon.rs  menu.rs  mod.rs
wsl-tamer-tauri/src-tauri/src/utils/: encoding.rs  mod.rs  process.rs  rate_limit.rs  sanitize.rs
(+116 files in other folders)
