[package]
name = "wsl-tamer"
version = "2.0.0"
description = "Advanced WSL2 Distribution Manager"
authors = ["Ryan Haver"]
edition = "2021"
license = "MIT"

[lib]
name = "wsl_tamer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
encoding_rs = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rust-ini = "0.21.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation"
] }
